[tool.poetry]
name = "slack-get-history"
version = "0.1.0"
description = ""
authors = ["shin5ok <shin5ok@55mp.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
texttable = "^1.6.7"
google-cloud-aiplatform = "^1.31.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
langchain-community = "^0.0.20"
langchain-google-vertexai = "^0.0.5"
langchain = "^0.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
